--- a/10.2.md
+++ b/10.2.md
@@ -1,40 +1,40 @@
 # 10月2日の日志
-## 1.学习目标&时间 br
- 构建好bot框架 br
- 了解学习python语法 br
- 时间：830——1230,130——2400
+## 1.学习目标&时间 <br>
+ 构建好bot框架 <br>
+ 了解学习python语法 <br>
+ 时间：830——1230,130——2400 <br>
 
-## 2.学习内容 br
-### 1.完成bot框架构建 br
- - nonebot + go-cqhttp + API；br
-### 2.了解python语法 br
- - 变量+方法+函数（不熟悉）+类（不太了解）+List+dict+tuple
+## 2.学习内容 <br>
+### 1.完成bot框架构建 <br>
+ - nonebot + go-cqhttp + API；<br>
+### 2.了解python语法 <br>
+ - 变量+方法+函数（不熟悉）+类（不太了解）+List+dict+tuple <br>
 
-## 3.明日学习内容 br
-### 1.测试bot框架；br
-### 2.熟悉python语法：br
-### 3.实现bot自动回复等功能。br
+## 3.明日学习内容 <br>
+### 1.测试bot框架；<br>
+### 2.熟悉python语法：<br>
+### 3.实现bot自动回复等功能。<br>
 
-## 4.学习总结 br
-### 蚌埠住了 br
- -真正的自己上手和理论方法了解完全不同（！！！） br
- 早上起来用昨天（前天）想到的方法尝试搭建，由于对看不懂python，不能自己敲出服务器，导致无法实现python监听 br
- 然后就去了解python语法，显然是高看我自己了qwq br
- 没办法只能寻找其他方法，于是找到用nonebot作为框架实现 br
- 我只能说好景不长，nonebot和go-cqhttp配置时遇到python版本改变（需逐一修改文件）和poetry安装配置等问题 br
- 前者花了很长时间没有解决，最后下载老版本python后pip install nb-cli，再换为新版本来规避mapping问题 br
- 后者安装poetry后无法使用poetry指令，尝试重新安装，配置环境变量，搜索各种解决办法没有得到解决，然后我重启就好了... br
- 蚌埠住了。。。br
-### 收获&感想 br
- -这个可恶的家伙总是在我即将放弃的时候给我安慰，让我通过error br
- 一次次遇到问题——解决问题的过程，就是我蹒跚学步跌倒又爬起的过程 br
- 在cmd输指令时，在官方文档蒙圈时，在搭建环境时，在配置环境变量时... br
- 一次次面对这些陌生的名词和界面，一次次焦虑害怕以后，一次次解决error通往下一步... br
- 不知不觉中便发现，在一次又一次之后，这些东西仿佛成了老朋友，即使我们没有完全认识，但已经熟悉 br
- 也许，他们也是这么想的，所以在一次又一次我即将放弃的时候，帮我度过难关 br
+## 4.学习总结<br>
+### 蚌埠住了 <br>
+ -真正的自己上手和理论方法了解完全不同（！！！） <br>
+ 早上起来用昨天（前天）想到的方法尝试搭建，由于对看不懂python，不能自己敲出服务器，导致无法实现python监听 <br>
+ 然后就去了解python语法，显然是高看我自己了qwq <br>
+ 没办法只能寻找其他方法，于是找到用nonebot作为框架实现 <br>
+ 我只能说好景不长，nonebot和go-cqhttp配置时遇到python版本改变（需逐一修改文件）和poetry安装配置等问题 <br>
+ 前者花了很长时间没有解决，最后下载老版本python后pip install nb-cli，再换为新版本来规避mapping问题 <br>
+ 后者安装poetry后无法使用poetry指令，尝试重新安装，配置环境变量，搜索各种解决办法没有得到解决，然后我重启就好了... <br>
+ 蚌埠住了。。。<br>
+### 收获&感想<br>
+ -这个可恶的家伙总是在我即将放弃的时候给我安慰，让我通过error <br>
+ 一次次遇到问题——解决问题的过程，就是我蹒跚学步跌倒又爬起的过程 <br>
+ 在cmd输指令时，在官方文档蒙圈时，在搭建环境时，在配置环境变量时... <br>
+ 一次次面对这些陌生的名词和界面，一次次焦虑害怕以后，一次次解决error通往下一步... <br>
+ 不知不觉中便发现，在一次又一次之后，这些东西仿佛成了老朋友，即使我们没有完全认识，但已经熟悉 <br>
+ 也许，他们也是这么想的，所以在一次又一次我即将放弃的时候，帮我度过难关 <br>
 
- -计算机需要不断的学习 br
- 我问”这会不会揠苗助长“，他答“为什么一定要一步一步来” br
- 其实很多知识必须通过自己去获取学习，很多知识是不会有人教授给你的 br
- 不愿意接受新的知识并不是笨，而是懒惰在作祟 br
- 不必把“没学过”挂在嘴边，不如动手试试！
+ -计算机需要不断的学习 <br>
+ 我问”这会不会揠苗助长“，他答“为什么一定要一步一步来” <br>
+ 其实很多知识必须通过自己去获取学习，很多知识是不会有人教授给你的 <br>
+ 不愿意接受新的知识并不是笨，而是懒惰在作祟 <br>
+ 不必把“没学过”挂在嘴边，不如动手试试！<br>
