--- a/10.3.md
+++ b/10.3.md
@@ -20,9 +20,9 @@
 >>感到从头到尾的失落，毫无头绪，无从下手，甚至想放弃这个项目 <br>
 >>我带着绝望的心情在CSDN和B站上逛了又逛，看到别人的代码 <br>
 >>然而当我cv到自己的编译器时，由于各种问题导致不能运行 <br>
->>当我向他人发牢骚时，对方问我***”你究竟要学什么“ ***<br>
->>这句话像风一样，刹那间吹散了名为***”焦虑”***的阴云 <br>
->>我究竟要学什么？ <br>
+>当我向他人发牢骚时，对方问我 ***”你究竟要学什么“ ***<br>
+>>这句话像风一样，刹那间吹散了名为 ***”焦虑”*** 的阴云 <br>
+>我究竟要学什么？ <br>
 >>制作一个bot需要什么？<br>
 >>用户端，终端，API，服务器，数据库...... <br>
 >>一个bot的制作，其实是一整个前端后端实现的体现外化 <br>
@@ -31,7 +31,7 @@
 >>而我们需要做的，是实现python和gocq的通信 <br>
 >>然后加入插件加载代码，编写插件 <br>
 >>就能实现一个bot的多功能...... <br>
->>当走投无路的时候，为什么不想想“我究竟要学什么？” <br>
->>我现在知道，我需要阅读他人代码，了解request，flask，快速上手 <br>
->>而不是理想化的从头开始 <br>
->>有时并***不需要一步一步来*** <br>
+>当走投无路的时候，为什么不想想“我究竟要学什么？” <br>
+>我现在知道，我需要阅读他人代码，了解request，flask，快速上手 <br>
+>而不是理想化的从头开始 <br>
+>有时并***不需要一步一步来*** <br>
